# kubespray_vagrant

./: README.md  README.txt  Vagrantfile  inventory  openebs.yml  phase-II.yml  ping.yml  start.bash  start.yml
.vagrant/machines/k8sv4-1/virtualbox/: action_provision  action_set_name  id  index_uuid
.vagrant/machines/k8sv4-2/virtualbox/: action_provision  action_set_name  id  index_uuid  vagrant_cwd
.vagrant/machines/k8sv4-3/virtualbox/: action_provision  action_set_name  id  index_uuid  synced_folders
.vagrant/provisioners/ansible/: inventory
poetry/: pyproject.toml
