[tool.poetry]
name = "poetryr3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
ansible = "5.5.0"
ansible-core = "2.12.3"
cryptography = "2.8"
Jinja2 = "2.11.3"
netaddr = "0.7.19"
pbr = "5.4.4"
jmespath = "0.9.5"
"ruamel.yaml" = "0.16.10"
"ruamel.yaml.clib" = "0.2.6"
MarkupSafe = "1.1.1"




[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
